--- a/styles/Navbar.css
+++ b/styles/Navbar.css
@@ -40,12 +40,21 @@
   height: 84px;
 }
 .navbar__component .right .profile {
-    display: flex;
-    align-items: center;
-    gap: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 .navbar__component .right .profile span {
-    font-weight: 500;
-font-size: 18px;
-line-height: 25px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+@media (max-width: 1300px) {
+  .navbar__component {
+    padding: 0 20px;
+  }
+  .navbar__component .right {
+    gap: 10px;
+  }
 }
